# Coursework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
includes/core/: App.hpp  Core.hpp  Renderer.hpp  UIManager.hpp
includes/ui/: UI.hpp
includes/ui/components/: Button.hpp  Components.hpp  UIComponent.hpp
includes/utils/: hex-to-imvec4.hpp  screen-size.hpp  style-value.hpp
scripts/: build.sh
src/: iui-component.hpp  label.cpp  label.hpp  main.cpp  panel.hpp  toggle.cpp  toggle.hpp
src/app/: App.cpp  main.cpp
src/core/: App.cpp  Core.cpp  Renderer.cpp  UIManager.cpp
src/render/: font.hpp  image.hpp  primitive.hpp
src/ui/: iui-manager.hpp
src/ui/components/: Button.cpp  UIComponent.cpp  button.hpp  iui-component.hpp  iui-widget.hpp  panel.hpp  prop.hpp  ui-component.cpp  ui-component.hpp  ui-widget.cpp  ui-widget.hpp
src/ui/events/: event-manager.cpp  event-manager.hpp  event.hpp  ievent-listener.hpp  ievent-manager.hpp
src/ui/state/: action.hpp  state-listener.hpp  state-manager.cpp  state-manager.hpp  state.cpp  state.hpp  store.cpp  store.hpp
src/utils/: hex-to-imvec4.cpp  screen-size.cpp  style-value.cpp
src/window/: iwindow-provider.hpp  window-manager.hpp  window.hpp
test/: main.test.cpp
